View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022927 | Open CASCADE | OCCT:Modeling Algorithms | public | 2012-01-25 18:54 | 2013-04-29 15:21 |
Reporter | Assigned To | vro | |||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2005 | ||
Product Version | 6.5.4 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0022927: Regression with OCCT652 on Windows. DRAWEXE craches during offsetcomshape. | ||||
Description | crash of DRAWEXE from occt-20120120-opt-vc8 | ||||
Steps To Reproduce | x: -> //virtex/dn45 pload TOPTEST datadir x:/occttests/tests/ED/ccv/data restore 2_D1.rle s explode s F catch {offsetcompshape result s -2 s_17} crash of DRAWEXE | ||||
Tags | No tags attached. | ||||
Test case number | offset compshape A4 | ||||
related to | 0023524 | new | Command offsetcompshape produces incorrect result |
|
Dear Vladislav, Please see if the problem is reproduced on current master. |
|
2_D1offset-2.png (5,935 bytes) |
|
The algorithm BRepOffset_MakeOffset has a restriction for this particular case. In other words, the operation can't be performed. A neighbour face of the "stop" face (they are in green in the pic 2_D1offset-2.png) represents a cylinder. Being offseted and enlarged the cylinder doesn't intersect the enlarged (but not offseted) planar "stop" face. So, a closed shell can't be constructed, the result is not reachable. |
|
Dear Julia, what is your opinion on this bug (restriction of the algorithm)? |
|
In addition, I put into CR22927 a small check operation to avoid a crash in case of no intersections between offset and enlarged faces. |
|
Dear Mikhail, The bug is not reproduced (no crash). Please check it again on last version and modify the test script to make it OK. |
|
Dear BugMaster, Branch CR22927 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regression: Not detected Improvements: Not detected Testing case: offset compshape A4 - BAD (known problem) Test case was modified (necessary TODO was added) and new bug 23524 was created. |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-01-25 18:54 |
|
New Issue | |
2012-01-25 18:54 |
|
Assigned To | => jgv |
2012-06-18 21:51 |
|
Note Added: 0020722 | |
2012-06-18 21:51 |
|
Assigned To | jgv => vro |
2012-06-18 21:51 |
|
Status | new => assigned |
2012-06-20 08:31 | vro | File Added: 2_D1offset-2.png | |
2012-06-20 08:36 | vro | Note Added: 0020739 | |
2012-06-20 08:37 | vro | Note Added: 0020740 | |
2012-06-20 08:37 | vro | Assigned To | vro => jgv |
2012-06-20 08:37 | vro | Status | assigned => feedback |
2012-06-20 08:52 | vro | Note Added: 0020741 | |
2012-10-24 18:00 |
|
Target Version | => 6.6.0 |
2012-11-02 16:15 |
|
Assigned To | jgv => mkv |
2012-11-02 16:16 |
|
Note Added: 0022085 | |
2012-11-02 16:16 |
|
Status | feedback => assigned |
2012-11-07 15:31 | apn | Test case number | => offset compshape A4 |
2012-11-07 15:35 | apn | Assigned To | mkv => apn |
2012-11-08 13:45 | apn | Relationship added | related to 0023524 |
2012-11-08 13:58 | apn | Note Added: 0022146 | |
2012-11-08 13:59 | apn | Assigned To | apn => bugmaster |
2012-11-08 13:59 | apn | Status | assigned => resolved |
2012-11-08 13:59 | apn | Status | resolved => reviewed |
2012-11-08 13:59 | apn | Status | reviewed => tested |
2012-11-16 13:03 | vro | Changeset attached | => occt master 80e49d43 |
2012-11-16 13:03 | vro | Assigned To | bugmaster => vro |
2012-11-16 13:03 | vro | Status | tested => verified |
2012-11-16 13:03 | vro | Resolution | open => fixed |
2012-12-10 17:16 | vro | Changeset attached | => occt master 80e49d43 |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |