0022927: Regression with OCCT652 on Windows. DRAWEXE crashes during offsetcomshape.

Check was added to avoid a crash if result is not reachable.
Modified test case